project('tlpi', 'c', default_options: ['c_std=c11'])

# Chapter 5
executable('tee', 'tee/tee.c')
executable('copy-content', 'cp/copy_file_content.c')

# Chapter 6
executable('large_file', 'fileio/large_file.c')
executable('append_seek', 'fileio/append_seek.c')
executable('atomic_append', 'fileio/atomic_append.c')
executable('dup', 'fileio/dup.c')
executable('dup_fd_offset', 'fileio/dup_fd_offset.c')
